Update index.html to remove Algebra 2 section
Removed references to Algebra 2 from the main content.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="ab.html">AP Calculus AB</a></li>
           <li><a href="bc.html">AP Calculus BC</a></li>
-          <li><a href="algebra2.html">Algebra 2</a></li>
         </ul>
       </nav>
     </div>
@@ -24,7 +23,7 @@
   <main class="container">
     <section class="hero">
       <h2>Welcome!</h2>
-      <p>Explore worksheets, notes, and resources for AP Calculus AB, BC, and Algebra 2.</p>
+      <p>Explore worksheets, notes, and resources for AP Calculus AB and BC.</p>
       <a href="ab.html" class="btn">Get Started</a>
     </section>
 
@@ -38,11 +37,6 @@
         <h3>AP Calculus BC</h3>
         <p>Resources for AP Calculus BC, including series, parametrics, and more.</p>
         <a href="bc.html" class="btn">Explore BC</a>
-      </div>
-      <div class="card">
-        <h3>Algebra 2</h3>
-        <p>Algebra 2 lessons, worksheets, and review materials.</p>
-        <a href="algebra2.html" class="btn">Explore Algebra 2</a>
       </div>
     </section>
   </main>
