--- a/ab.html
+++ b/ab.html
@@ -27,53 +27,81 @@
         <thead>
           <tr>
             <th>Unit</th>
-            <th>Topics / Resources</th>
+            <th>Unit Packet & Solutions</th>
+            <th>Unit Homework & Solutions</th>
+            <th>Videos</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Unit 1</td>
-            <td>Limits & Continuity</td>
+            <td data-label="Unit">Unit 1</td>
+            <td data-label="Unit Packet & Solutions">
+              <a href="#">Packet</a> | <a href="#">Solutions</a>
+            </td>
+            <td data-label="Unit Homework & Solutions">
+              <a href="#">Homework</a> | <a href="#">Solutions</a>
+            </td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 2</td>
-            <td>Derivatives</td>
+            <td data-label="Unit">Unit 2</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 3</td>
-            <td>Applications of Derivatives</td>
+            <td data-label="Unit">Unit 3</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 4</td>
-            <td>Integrals</td>
+            <td data-label="Unit">Unit 4</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 5</td>
-            <td>Applications of Integrals</td>
+            <td data-label="Unit">Unit 5</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 6</td>
-            <td>Polynomial Approximations & Series (AB limited)</td>
+            <td data-label="Unit">Unit 6</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 7</td>
-            <td>AP Exam Skills: Multiple Representations</td>
+            <td data-label="Unit">Unit 7</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Unit 8</td>
-            <td>Review & Cumulative Topics</td>
+            <td data-label="Unit">Unit 8</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Video 1</a>, <a href="#">Video 2</a></td>
           </tr>
           <tr>
-            <td>Calculator Resources</td>
-            <td>Graphing, TI-84 / TI-Nspire guides, calculator tips</td>
+            <td data-label="Unit">Calculator</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Guide</a></td>
+            <td data-label="Unit Homework & Solutions">-</td>
+            <td data-label="Videos"><a href="#">Calculator Video</a></td>
           </tr>
           <tr>
-            <td>Practice Tests & Solutions</td>
-            <td>Past AP exams, released free-response, answer keys</td>
+            <td data-label="Unit">Practice Tests & Solutions</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Test 1</a> | <a href="#">Solutions</a></td>
+            <td data-label="Unit Homework & Solutions"><a href="#">Test 2</a> | <a href="#">Solutions</a></td>
+            <td data-label="Videos"><a href="#">Review Video</a></td>
           </tr>
           <tr>
-            <td>AP Exam Prep</td>
-            <td>Exam strategies, timing, and review packets</td>
+            <td data-label="Unit">AP Exam Prep</td>
+            <td data-label="Unit Packet & Solutions"><a href="#">Prep Guide</a></td>
+            <td data-label="Unit Homework & Solutions">-</td>
+            <td data-label="Videos"><a href="#">Prep Video</a></td>
           </tr>
         </tbody>
       </table>
