--- a/bc.html
+++ b/bc.html
@@ -110,14 +110,13 @@
       </table>
 
       <!-- Practice Tests Table -->
-      <h2>Practice Tests</h2>
+       <h2>Practice Tests</h2>
       <table>
         <thead>
           <tr>
-            <th>Test</th>
-            <th>Packet & Solutions</th>
-            <th>Homework & Solutions</th>
-            <th>Videos</th>
+            <th>Marking Period</th>
+            <th>Practice Test & Solutions</th>
+            <th>Video Solutions</th>
           </tr>
         </thead>
         <tbody>
@@ -149,22 +148,21 @@
       <table>
         <thead>
           <tr>
-            <th>Prep Item</th>
-            <th>Link 1</th>
-            <th>Link 2</th>
+            <th>FRQ Thursday Review</th>
+            <th>Practice Exams and Solutions</th>
+            <th>AB Review Sources</th>
             <th>Link 3</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td data-label="Prep Item">AP Exam Prep</td>
-            <td data-label="Link 1"><a href="#">Link</a></td>
+            <td data-label="FRQ Review 1"><a href="#">Link</a></td>
+            <td data-label="Practice Exams"><a href="#">Link</a></td>
             <td data-label="Link 2"><a href="#">Link</a></td>
             <td data-label="Link 3"><a href="#">Link</a></td>
           </tr>
         </tbody>
       </table>
-
     </section>
   </main>
 
