--- a/ab.html
+++ b/ab.html
@@ -38,55 +38,54 @@
             <td data-label="Unit">Unit 1 - Limits and Continuity</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 2 - Differentiation and Derivative Rules</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 3 - Differentiation and Derivative Rules</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 4 - Contextual Applications of Derivatives</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 5 - Analytical Applications of Derivatives</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 6 - Integration and Accumulation</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 7 - Differential Equations</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit 8 - Applications of Integration</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Videos By Lesson</a>, <a href="#">Unit Video Review</a></td>
+            <td data-label="Videos"><a href="#">Videos By Lesson</a> | <a href="#">Unit Video Review</a></td>
           </tr>
           <tr>
             <td data-label="Unit">Unit C - Calculator Skills</td>
             <td data-label="Packet & Solutions"><a href="#">Packet</a> | <a href="#">Solutions</a></td>
             <td data-label="Homework & Solutions"><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-            <td data-label="Videos"><a href="#">Video</a></td>
           </tr>
         </tbody>
       </table>
