--- a/index.html
+++ b/index.html
@@ -132,14 +132,16 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="ab.html">AP Calculus AB</a></li>
         <li><a href="bc.html">AP Calculus BC</a></li>
+        <li><a href="algebra2.html">Algebra 2</a></li>
+        <li><a href="cool.html">Cool Math Stuff</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <h2>Welcome to AP Calculus Resources!</h2>
-      <p>Explore worksheets, notes, practice problems, and video lessons for AP Calculus AB and BC.</p>
+      <h2>Welcome to My Math Resources!</h2>
+      <p>Explore worksheets, notes, practice problems, and fun math projects I created!</p>
     </section>
 
     <section class="classes">
@@ -152,6 +154,16 @@
         <h3>AP Calculus BC</h3>
         <p>Resources for AP Calculus BC, including series, parametrics, and more.</p>
         <a href="bc.html" class="btn">Explore BC</a>
+      </div>
+      <div class="card">
+        <h3>Algebra 2</h3>
+        <p>Worksheets, notes, and practice problems for Algebra 2.</p>
+        <a href="algebra2.html" class="btn">Explore Algebra 2</a>
+      </div>
+      <div class="card">
+        <h3>Cool Math Stuff</h3>
+        <p>Check out fun projects, puzzles, and math experiments I made!</p>
+        <a href="cool.html" class="btn">Explore Cool Stuff</a>
       </div>
     </section>
   </main>
