Add new project card for Coloring Patterns

--- a/cool.html
+++ b/cool.html
@@ -167,6 +167,11 @@
         <p>Placeholder description for Math Dance project.</p>
         <a href="#" class="btn">Open Project</a>
       </div>
+      <div class="card">
+        <h3>Coloring Patterns with Numbers</h3>
+        <p>Placeholder description for Colors project.</p>
+        <a href="#" class="btn">Open Project</a>
+      </div>
     </section>
   </main>
 
