Update unit titles and replace video links with projects

--- a/algebra2.html
+++ b/algebra2.html
@@ -115,57 +115,57 @@
           <th>Unit</th>
           <th>Packet & Solutions</th>
           <th>Homework & Solutions</th>
-          <th>Videos</th>
+          <th>Projects</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Unit 1 - Foundations</td>
+          <td>Unit 1 - Function and their Characteristics</td>
+          <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
+          <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
+          <td><a href="#">Desmos Project</a></td>
+        </tr>
+        <tr>
+          <td>Unit 2 - Quadratic Functions</td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Videos</a></td>
         </tr>
         <tr>
-          <td>Unit 2 - Linear Equations & Inequalities</td>
+          <td>Unit 3 - Polynomial Functions</td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
+          <td><a href="#">Rollercoaster Project</a></td>
         </tr>
         <tr>
-          <td>Unit 3 - Quadratic Functions</td>
+          <td>Unit 4 - Radical and Rational Functions</td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
+          <td><a href="#">Animal Species Project</a></td>
         </tr>
         <tr>
-          <td>Unit 4 - Polynomials</td>
+          <td>Unit 5 - Exponential & Logarithmic Functions </td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
+          <td><a href="#">Credit Score Project</a> | <a href="#">Zombie Project</a></td>
         </tr>
         <tr>
-          <td>Unit 5 - Rational Expressions & Functions</td>
+          <td>Unit 6 - Sequences & Series </td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
+          <td><a href="#">Sequence Project</a></td>
         </tr>
         <tr>
-          <td>Unit 6 - Exponential & Logarithmic Functions</td>
+          <td>Unit 7 - Trigonometry</td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
-        </tr>
-        <tr>
-          <td>Unit 7 - Sequences & Series</td>
-          <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
+          <td><a href="#">Temperature Project</a></td>
         </tr>
         <tr>
           <td>Unit 8 - Probability & Statistics</td>
           <td><a href="#">Packet</a> | <a href="#">Solutions</a></td>
           <td><a href="#">Homework</a> | <a href="#">Solutions</a></td>
-          <td><a href="#">Videos</a></td>
+          <td><a href="#">Statistics Project</a></td>
         </tr>
       </tbody>
     </table>
