--- a/cool.html
+++ b/cool.html
@@ -130,47 +130,47 @@
       <div class="card">
         <h3>Qu0x</h3>
         <p>A number game where you use 5 numbers and operations to make a target number.</p>
-        <a href="#" class="btn">Open Qu0x</a>
+        <a href="qu0x.com" class="btn">Open Qu0x</a>
       </div>
       <div class="card">
         <h3>Stick Simulation</h3>
         <p>Simulation to show the expected number of draws on a uniform distribution to reach a target sum.</p>
-        <a href="#" class="btn">Open Simulation</a>
+        <a href="pcox44.github.io/uniform-sum" class="btn">Open Simulation</a>
       </div>
       <div class="card">
         <h3>Ants on Polygons</h3>
         <p>Simulation to model a random walk on a closed circuit.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/ants" class="btn">Open Project</a>
       </div>
       <div class="card">
         <h3>Schur Colorings</h3>
         <p>Game to try to maximize Schur numbers.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/schur" class="btn">Open Project</a>
       </div>
       <div class="card">
         <h3>Picking a Porta-Potty</h3>
         <p>Simulation for the secretary problem with a changed context.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/porta-potty" class="btn">Open Project</a>
       </div>
       <div class="card">
         <h3>Catching All Pokemon</h3>
         <p>The Coupon Collector Problem simulator, but with Pokemon.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/pokemon" class="btn">Open Project</a>
       </div>
       <div class="card">
         <h3>Buffon's Needle</h3>
         <p>Simulation to show pi through the Buffon Needle process, but with footballs.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/buffon" class="btn">Open Project</a>
       </div>
       <div class="card">
         <h3>Math Dance</h3>
         <p>Demonstration to show how mapping numbers shows beautiful patterns.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/mathdance" class="btn">Open Project</a>
       </div>
       <div class="card">
         <h3>Coloring Patterns with Numbers</h3>
         <p>Colors the screen based on number properties selected.</p>
-        <a href="#" class="btn">Open Project</a>
+        <a href="pcox44.github.io/colors" class="btn">Open Project</a>
       </div>
     </section>
   </main>
