--- a/ab.html
+++ b/ab.html
@@ -196,37 +196,40 @@
         </tbody>
       </table>
 
-      <!-- AP Exam Prep Table -->
       <h2>AP Exam Prep</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>FRQ Thursday Review</th>
-            <th>Practice Exams and Solutions</th>
-            <th>AB Review Resources</th>
-            <th>AB Practice Problems</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td data-label="FRQ Review 1"><a href="#">FRQ Review 1</a></td>
-            <td data-label="Practice Exams"><a href="#">2020 Cox Practice Exam</a> | <a href="LINK">Solutions</a></td>
-            <td data-label="Link 2"><a href="#">175 Multiple Choice</a> | <a href="LINK">Solutions</a></td>
-            <td data-label="Link 3"><a href="#">AB Cheat Sheet</a></td>
-          </tr>
-         <tr>
-            <td data-label="FRQ Review 1"><a href="#">FRQ Review 2</a></td>
-            <td data-label="Practice Exams"><a href="#">2012 AB Exam</a> | <a href="LINK">Solutions</a></td>
-            <td data-label="Link 2"><a href="#">Unit 1-8 FRQ Review</a> | <a href="LINK">Solutions</a></td>
-            <td data-label="Link 3"><a href="#">What to Know from each Unit</a></td>
-          </tr>
-           <tr>
-            <td data-label="FRQ Review 1"><a href="#">FRQ Review 3</a></td>
-            <td data-label="Practice Exams"><a href="#">2003 AB Exam</a> | <a href="LINK">Solutions</a></td>
-            <td data-label="Link 2"><a href="#">Unit 1-8 Big 10 Review</a> | <a href="LINK">Solutions</a></td>
-          </tr>
-        </tbody>
-      </table>
+<table>
+  <thead>
+    <tr>
+      <th>FRQ Thursday Review</th>
+      <th>Practice Exams and Solutions</th>
+      <th>AB Review Resources</th>
+      <th>AB Practice Problems</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="#">FRQ Review 1</a></td>
+      <td><a href="#">2020 Cox Practice Exam</a> | <a href="LINK">Solutions</a></td>
+      <td><a href="#">175 Multiple Choice</a> | <a href="LINK">Solutions</a></td>
+      <td><a href="#">AB Cheat Sheet</a></td>
+    </tr>
+
+    <tr>
+      <td><a href="#">FRQ Review 2</a></td>
+      <td><a href="#">2012 AB Exam</a> | <a href="LINK">Solutions</a></td>
+      <td><a href="#">Unit 1–8 FRQ Review</a> | <a href="LINK">Solutions</a></td>
+      <td><a href="#">What to Know from Each Unit</a></td>
+    </tr>
+
+    <tr>
+      <td><a href="#">FRQ Review 3</a></td>
+      <td><a href="#">2003 AB Exam</a> | <a href="LINK">Solutions</a></td>
+      <td><a href="#">Unit 1–8 Big 10 Review</a> | <a href="LINK">Solutions</a></td>
+      <td><!-- empty cell to keep table aligned --></td>
+    </tr>
+  </tbody>
+</table>
+
     </section>
   </main>
 
