--- a/ab.html
+++ b/ab.html
@@ -220,7 +220,7 @@
 
     <tr>
       <td>FRQ Review 2</td>
-      <td><a href="https://secure-media.collegeboard.org/digitalServices/pdf/ap/ap-calculus-ab-practice-exam-2012.pdf">2012 AB Exam (Solutions Included0</a></td>
+      <td><a href="https://secure-media.collegeboard.org/digitalServices/pdf/ap/ap-calculus-ab-practice-exam-2012.pdf">2012 AB Exam (Solutions Included)</a></td>
       <td><a href="https://drive.google.com/file/d/19tvxWnuPea9mhE7ZE6QmuQrQQj8hkVih/view?usp=drive_link">Unit 1–8 FRQ Review</a> | <a href="https://drive.google.com/file/d/1jrsLqs8B0Xwsn2x0RGv1SztFk0MFissZ/view?usp=drive_link">Solutions</a></td>
       <td><a href="https://drive.google.com/file/d/1nNsaIN1SrBttgsnQ6EE2jbx7T0Z4Oe-5/view?usp=drive_link">What to Know from Each Unit</a></td>
     </tr>
