--- a/bc.html
+++ b/bc.html
@@ -243,7 +243,7 @@
       <th>FRQ Thursday Review</th>
       <th>Practice Exams and Solutions</th>
       <th>AB Practice Problems </th>
-      <th>AB Review Resources</th>
+      <th>Review Resources</th>
     </tr>
   </thead>
   <tbody>
