--- a/bc.html
+++ b/bc.html
@@ -269,7 +269,7 @@
     </tr>
     <tr>
       <td>FRQ Review 4</td>
-      <td><a href="https://apcentral.collegeboard.org/courses/ap-calculus-ab/exam/past-exam-questions">Past AB FRQ (Solutions Included)</a> </td>
+      <td><a href="https://apcentral.collegeboard.org/courses/ap-calculus-bc/exam/past-exam-questions">Past BC FRQ (Solutions Included)</a> </td>
       <td><a href="https://drive.google.com/file/d/1O9nOsMav6nUZj8rnejdZFXJtNVHiPLfc/view?usp=drive_link">Unit 1–8 Hopscotch Review</a></td>
       <td><!-- empty cell to keep table aligned --></td>
     </tr>
