--- a/index.html
+++ b/index.html
@@ -6,125 +6,118 @@
   <title>Mr. Cox's Math Classes</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* General Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
+    /* Reset & Base */
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+    body { background-color: #f2efe9; color: #000; line-height: 1.6; }
 
-    body {
-      background-color: #fdf6f0;
-      color: #333;
-      line-height: 1.6;
-    }
-
+    /* Header */
     header {
-      background-color: #4a90e2;
-      color: #fff;
-      padding: 1rem 0;
+      border: 8px solid #000;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      margin-bottom: 2rem;
     }
-
     header h1 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      gap: 2rem;
-    }
-
-    nav a {
+      background-color: #ff0000; /* red */
       color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
+      text-align: center;
       padding: 2rem 1rem;
-      max-width: 1000px;
-      margin: 0 auto;
+      font-size: 2.8rem;
+      border-bottom: 8px solid #000;
+      font-weight: 700;
+      letter-spacing: 2px;
     }
+    nav ul {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+    }
+    nav li a {
+      display: block;
+      text-align: center;
+      padding: 1rem;
+      font-weight: 700;
+      border-right: 8px solid #000;
+      border-bottom: 8px solid #000;
+      text-decoration: none;
+      color: #fff;
+      transition: filter 0.2s;
+    }
+    nav li:nth-child(1) a { background-color: #0047ab; } /* blue */
+    nav li:nth-child(2) a { background-color: #ffd700; color: #000; } /* yellow */
+    nav li:nth-child(3) a { background-color: #fff; color: #000; } /* white */
+    nav li:nth-child(4) a { background-color: #ff0000; } /* red */
+    nav li a:hover { filter: brightness(1.2); }
 
+    /* Hero Section */
     .hero {
+      background-color: #ffd700; /* yellow */
+      border: 8px solid #000;
       text-align: center;
-      margin-bottom: 3rem;
+      padding: 3rem 1rem;
+      margin: 0 2rem 2rem 2rem;
     }
+    .hero h2 { font-size: 2.8rem; margin-bottom: 1rem; }
+    .hero p { font-size: 1.2rem; }
 
-    .hero h2 {
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
-      color: #4a90e2;
-    }
-
-    .hero p {
-      font-size: 1.1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .classes {
-      display: flex;
-      flex-wrap: wrap;
+    /* Main Grid */
+    main {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
-      justify-content: center;
+      max-width: 1200px;
+      margin: 0 auto 3rem auto;
+      padding: 0 1rem;
     }
 
+    /* Cards */
     .card {
-      background-color: #fff;
+      border: 8px solid #000;
       padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      flex: 1 1 300px;
-      max-width: 350px;
       text-align: center;
-      transition: transform 0.2s, box-shadow 0.2s;
+      font-weight: 700;
+      transition: transform 0.2s;
     }
-
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-    }
-
-    .card h3 {
-      margin-bottom: 1rem;
-      color: #4a90e2;
-    }
-
-    .btn {
+    .card h3 { margin-bottom: 1rem; font-size: 1.8rem; }
+    .card p { margin-bottom: 1.5rem; font-weight: 500; }
+    .card a {
       display: inline-block;
       padding: 0.7rem 1.5rem;
-      background-color: #4a90e2;
-      color: #fff;
-      text-decoration: none;
       font-weight: 600;
-      border-radius: 6px;
-      transition: background-color 0.3s;
+      text-decoration: none;
+      color: #fff;
+      transition: filter 0.2s;
     }
+    .card:nth-child(1) { background-color: #0047ab; color: #fff; }
+    .card:nth-child(1) a { background-color: #ff0000; }
+    .card:nth-child(2) { background-color: #ffd700; color: #000; }
+    .card:nth-child(2) a { background-color: #0047ab; }
+    .card:nth-child(3) { background-color: #ff0000; color: #fff; }
+    .card:nth-child(3) a { background-color: #ffd700; color: #000; }
+    .card a:hover { filter: brightness(1.2); }
+    .card:hover { transform: scale(1.03); }
 
-    .btn:hover {
-      background-color: #357ab7;
-    }
-
+    /* Footer */
     footer {
+      background-color: #0047ab;
+      color: #fff;
+      padding: 2rem 1rem;
+      border-top: 8px solid #000;
       text-align: center;
-      padding: 1.5rem 0;
-      background-color: #f0f0f0;
-      margin-top: 3rem;
-      font-size: 0.95rem;
-      color: #666;
+      font-weight: 700;
+      letter-spacing: 1px;
+      margin-top: 2rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      nav ul { grid-template-columns: repeat(2, 1fr); }
+      main { grid-template-columns: 1fr; }
     }
   </style>
 </head>
-<body class="theme-mondrian">
+<body>
   <header>
     <h1>Mr. Cox's Math Classes</h1>
     <nav>
@@ -137,31 +130,31 @@
     </nav>
   </header>
 
+  <section class="hero">
+    <h2>Welcome to My Math Resources!</h2>
+    <p>Explore worksheets, notes, practice problems, and fun math projects I created!</p>
+  </section>
+
   <main>
-    <section class="hero">
-      <h2>Welcome to My Math Resources!</h2>
-      <p>Explore worksheets, notes, practice problems, and fun math projects I created!</p>
-    </section>
-
-    <section class="classes">
-      <div class="card">
-        <h3>AP Calculus AB</h3>
-        <p>Lessons, practice problems, and solutions for AP Calculus AB.</p>
-        <a href="ab.html" class="btn">Explore AB</a>
-      </div>
-      <div class="card">
-        <h3>AP Calculus BC</h3>
-        <p>Resources for AP Calculus BC, including series, parametrics, and more.</p>
-        <a href="bc.html" class="btn">Explore BC</a>
-      </div>
-
-      <div class="card">
-        <h3>Cool Math Stuff</h3>
-        <p>Check out fun projects, puzzles, and math experiments I made!</p>
-        <a href="cool.html" class="btn">Explore Cool Stuff</a>
-      </div>
-    </section>
+    <div class="card">
+      <h3>AP Calculus AB</h3>
+      <p>Lessons, practice problems, and solutions for AP Calculus AB.</p>
+      <a href="ab.html">Explore AB</a>
+    </div>
+    <div class="card">
+      <h3>AP Calculus BC</h3>
+      <p>Resources for AP Calculus BC, including series, parametrics, and more.</p>
+      <a href="bc.html">Explore BC</a>
+    </div>
+    <div class="card">
+      <h3>Cool Math Stuff</h3>
+      <p>Check out fun projects, puzzles, and math experiments I made!</p>
+      <a href="cool.html">Explore Cool Stuff</a>
+    </div>
   </main>
 
+  <footer>
+    &copy; 2025 Mr. Cox's Math Classes. All rights reserved.
+  </footer>
 </body>
 </html>
