--- a/ab.html
+++ b/ab.html
@@ -6,7 +6,7 @@
   <title>AP Calculus AB</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="theme-ab">
+<body class="theme-ab-mondrian">
   <header>
     <div class="container">
       <h1>AP Calculus AB</h1>
