--- a/bc.html
+++ b/bc.html
@@ -6,7 +6,7 @@
   <title>AP Calculus BC</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="theme-bc">
+<body class="theme-bc-mondrian">
   <header>
     <div class="container">
       <h1>AP Calculus BC</h1>
