--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin-bottom: 2rem;
     }
     header h1 {
-      background-color: #ff0000; /* red */
+      background-color: #ff7f7f; /* soft red */
       color: #fff;
       text-align: center;
       padding: 2rem 1rem;
@@ -29,6 +29,8 @@
       font-weight: 700;
       letter-spacing: 2px;
     }
+
+    /* Navigation */
     nav ul {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -41,66 +43,18 @@
       border-right: 8px solid #000;
       border-bottom: 8px solid #000;
       text-decoration: none;
-      color: #fff;
       transition: filter 0.2s;
-    }
-    nav li:nth-child(1) a { background-color: #0047ab; } /* blue */
-    nav li:nth-child(2) a { background-color: #ffd700; color: #000; } /* yellow */
-    nav li:nth-child(3) a { background-color: #fff; color: #000; } /* white */
-    nav li:nth-child(4) a { background-color: #ff0000; } /* red */
-    nav li a:hover { filter: brightness(1.2); }
-
-    /* Hero Section */
-    .hero {
-      background-color: #ffd700; /* yellow */
-      border: 8px solid #000;
-      text-align: center;
-      padding: 3rem 1rem;
-      margin: 0 2rem 2rem 2rem;
-    }
-    .hero h2 { font-size: 2.8rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; }
-
-    /* Main Grid */
-    main {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      max-width: 1200px;
-      margin: 0 auto 3rem auto;
-      padding: 0 1rem;
-    }
-
-    /* Cards */
-    .card {
-      border: 8px solid #000;
-      padding: 2rem;
-      text-align: center;
-      font-weight: 700;
-      transition: transform 0.2s;
-    }
-    .card h3 { margin-bottom: 1rem; font-size: 1.8rem; }
-    .card p { margin-bottom: 1.5rem; font-weight: 500; }
-    .card a {
-      display: inline-block;
-      padding: 0.7rem 1.5rem;
-      font-weight: 600;
-      text-decoration: none;
       color: #fff;
-      transition: filter 0.2s;
     }
-    .card:nth-child(1) { background-color: #0047ab; color: #fff; }
-    .card:nth-child(1) a { background-color: #ff0000; }
-    .card:nth-child(2) { background-color: #ffd700; color: #000; }
-    .card:nth-child(2) a { background-color: #0047ab; }
-    .card:nth-child(3) { background-color: #ff0000; color: #fff; }
-    .card:nth-child(3) a { background-color: #ffd700; color: #000; }
-    .card a:hover { filter: brightness(1.2); }
-    .card:hover { transform: scale(1.03); }
+    nav li:nth-child(1) a { background-color: #6ea8fe; } /* soft blue */
+    nav li:nth-child(2) a { background-color: #fff3a0; color: #000; } /* soft yellow */
+    nav li:nth-child(3) a { background-color: #ffffff; color: #000; } /* white */
+    nav li:nth-child(4) a { background-color: #ff7f7f; } /* soft red */
+    nav li a:hover { filter: brightness(1.1); }
 
     /* Footer */
     footer {
-      background-color: #0047ab;
+      background-color: #6ea8fe; /* soft blue */
       color: #fff;
       padding: 2rem 1rem;
       border-top: 8px solid #000;
@@ -113,7 +67,6 @@
     /* Responsive */
     @media (max-width: 768px) {
       nav ul { grid-template-columns: repeat(2, 1fr); }
-      main { grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -130,31 +83,5 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h2>Welcome to My Math Resources!</h2>
-    <p>Explore worksheets, notes, practice problems, and fun math projects I created!</p>
-  </section>
-
-  <main>
-    <div class="card">
-      <h3>AP Calculus AB</h3>
-      <p>Lessons, practice problems, and solutions for AP Calculus AB.</p>
-      <a href="ab.html">Explore AB</a>
-    </div>
-    <div class="card">
-      <h3>AP Calculus BC</h3>
-      <p>Resources for AP Calculus BC, including series, parametrics, and more.</p>
-      <a href="bc.html">Explore BC</a>
-    </div>
-    <div class="card">
-      <h3>Cool Math Stuff</h3>
-      <p>Check out fun projects, puzzles, and math experiments I made!</p>
-      <a href="cool.html">Explore Cool Stuff</a>
-    </div>
-  </main>
-
-  <footer>
-    &copy; 2025 Mr. Cox's Math Classes. All rights reserved.
-  </footer>
 </body>
 </html>
