--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mr. Cox's Math Classes</title>
+  <title>Mr. Cox's Math Stuff</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* --------------------------------------------------
