--- a/ab.html
+++ b/ab.html
@@ -26,6 +26,7 @@
       font-size: 2.5rem;
       text-align: center;
       margin-bottom: 1rem;
+      color: #2e7d32; /* green header */
     }
 
     nav ul {
@@ -39,13 +40,18 @@
 
     nav a {
       text-decoration: none;
-      color: #000;
+      color: #2e7d32; /* green links */
       font-weight: 600;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
     }
 
     h2 {
       margin-top: 2rem;
       margin-bottom: 1rem;
+      color: #2e7d32; /* green section headers */
     }
 
     table {
@@ -55,14 +61,23 @@
     }
 
     th, td {
-      border: 2px solid #000;
+      border: 2px solid #2e7d32; /* green borders */
       padding: 0.5rem;
       text-align: left;
     }
 
     th {
-      background-color: #eee;
+      background-color: #d0f0c0; /* light green header background */
       font-weight: 700;
+      color: #1b5e20; /* dark green text */
+    }
+
+    a {
+      color: #2e7d32; /* green links */
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
 
     /* ---------- Responsive Styles ---------- */
